# gdl

./: AGENTS.md  README.md  pyproject.toml
openspec/changes/add-github-binary-downloader/: tasks.md
openspec/changes/archive/2026-01-23-2026-01-23-enhance-cli-options/: proposal.md  tasks.md
openspec/changes/archive/2026-01-23-add-github-binary-downloader/: design.md  proposal.md
openspec/changes/archive/2026-01-23-remove-win-synonym/: proposal.md  tasks.md
openspec/changes/archive/2026-01-24-2026-01-24-rename-blacklist-to-stop-words/: proposal.md  tasks.md
openspec/changes/archive/2026-01-24-add-choose-asset-file-option/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-24-add-progress-bar-for-asset-downloads/: proposal.md  tasks.md
openspec/changes/archive/2026-01-24-improve-bin-file-selection/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-24-split-github-downloader-2026-01-24/: design.md  proposal.md  (+1 more)
openspec/specs/archive/: spec.md
openspec/specs/choose-asset-file/: spec.md
openspec/specs/choose-bin-file-cli/: spec.md
openspec/specs/choose-largest-and-perm/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/cli-options/: spec.md
openspec/specs/github/: spec.md
openspec/specs/github-binary-downloader/: spec.md
openspec/specs/logic/: spec.md
openspec/specs/platform/: spec.md
openspec/specs/stop-words/: spec.md
openspec/specs/windows-asset-matching/: spec.md
src/gdl/: archive.py  cli.py  github.py  github_downloader.py  logic.py  platform.py  version.py
tests/: test_github_downloader.py
(+17 files in other folders)
