[project]
name = "gdl"
version = "0.1.0"
description = "Download Asset Fildes from Github Release Pages"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "杜世橋 Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["httpx>=0.25.0", "tyro>=0.8.0"]

[dependency-groups]
dev = ["poethepoet>=0.39.0", "pytest-cov>=7.0.0", "ruff>=0.14.14", "ty>=0.0.13"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[tool.poe.tasks]
ruff_check = "ruff check ."
ruff_fix = "ruff check --fix ."
ruff_format = "ruff format ."
ty_check = "ty check ."
check = ["ruff_check", "ty_check"]
format = ["ruff_fix", "ruff_format"]
test = "pytest tests -n auto --cov=app --cov-report=term --cov-report=xml"

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "RUF",
    "UP",
    "N",
    "SIM",
    "A",
    "S",
    "DTZ",
    "PIE",
    "PLE",
]
# add directory names to exclude from analysis
exclude = ["tests/**/*", "deps/**/*"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.ty.environment]
python-version = "3.13"
